mediaqueries.css
@media screen and (max-width:1200px){
    #desktop-nav{
        display: none;
    }
    #hamburger-nav{
        display: flex;
    }
    *{
        font-family: 'montserrat';
    }
    .section__text{
        width:fit-content;
        justify-items: center;
        text-align: center;
        margin-left: 0rem;
    }
    
    .googlebiz iframe{
        width: auto;
        height: 200px;
      }
    .footer{
        bottom: unset;
    }
    .col{
        flex-basis: 100%;
        padding: 10px;
      }
      .col:nth-child(2),.col:nth-child(3){
        flex-basis: 100%;
      }
      #brochure{
        width: min-content;
        margin-right: 8.5rem;
        margin-left: 8.5rem;
    }
}

@media screen and (max-width:600px){
    #desktop-nav{
        display: none;
    }
    #hamburger-nav{
        display: flex;
    }
    *{
        font-family: 'montserrat';
    }
    .section__text{
        width:fit-content;
        justify-items: center;
        text-align: center;
        margin-left: 0rem;
    }
    .under-dev{
        font-size: 1.2rem;
    }
    
    .googlebiz iframe{
        width: auto;
        height: 200px;
      }
    .footer{
        bottom: unset;
    }
    .col{
        flex-basis: 100%;
        padding: 10px;
      }
      .col:nth-child(2),.col:nth-child(3){
        flex-basis: 100%;
      }
    #brochure{
        width:min-content;
        margin-right: 8.5rem;
        margin-left: 8.5rem;
    }
}

